--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,9 @@
+<!--
+ * @Description: 
+ * @Author: cy2020
+ * @Date: 2022-02-19 14:30:10
+ * @LastEditTime: 2022-02-20 15:40:58
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -6,6 +12,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css">
   </head>
   <body>
     <noscript>
